--- a/README.Rmd
+++ b/README.Rmd
@@ -9,9 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 [![Travis build status](https://travis-ci.org/sevvandi/dobin.svg?branch=master)](https://travis-ci.org/sevvandi/dobin)
 
 ## Installation
-```{r ins}
-# install.packages("devtools")
-# devtools::install_github("sevvandi/dobin")
+```{r ins, eval=FALSE}
+ install.packages("devtools")
+ devtools::install_github("sevvandi/dobin")
 ```
 
 ## Example
