--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,8 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      fig.path="man/figures/")
 ```
 # dobin
 [![Travis build status](https://travis-ci.org/sevvandi/dobin.svg?branch=master)](https://travis-ci.org/sevvandi/dobin)
@@ -20,6 +21,7 @@ A bimodal distribution in six dimensions, with 5 outliers in the middle.  We con
 
 ```{r bimodal}
 library("dobin")
+library("ggplot2")
 set.seed(1)
 # A bimodal distribution in six dimensions, with 5 outliers in the middle.
 X <- data.frame(
@@ -30,9 +32,33 @@ X <- data.frame(
    x5 = rnorm(805),
    x6 = rnorm(805)
 )
-labs <- c(rep(0,400), rep(1,5), rep(0,400))
+labs <- c(rep("Norm",400), rep("Out",5), rep("Norm",400))
 out <- dobin(X)
-plot(out$coords[ , 1:2], col=as.factor(labs), pch=20)
+XX <- cbind.data.frame(out$coords[ ,1:2], as.factor(labs))
+colnames(XX) <- c("DC1", "DC2", "labs" )
+ggplot(XX, aes(DC1, DC2, color=labs)) + geom_point() + theme_bw()
+
 ```
 
+The first two principal components of the same dataset is shown in the following figure:
 
+```{r bimodal_pca}
+library("dobin")
+library("ggplot2")
+set.seed(1)
+# A bimodal distribution in six dimensions, with 5 outliers in the middle.
+X <- data.frame(
+   x1 = c(rnorm(400,mean=5), rnorm(5, mean=0, sd=0.2), rnorm(400, mean=-5)),
+   x2 = rnorm(805),
+   x3 = rnorm(805),
+   x4 = rnorm(805),
+   x5 = rnorm(805),
+   x6 = rnorm(805)
+)
+labs <- c(rep("Norm",400), rep("Out",5), rep("Norm",400))
+out <- prcomp(X, scale=TRUE)
+XX <- cbind.data.frame(out$x[ ,1:2], as.factor(labs))
+colnames(XX) <- c("PC1", "PC2", "labs" )
+ggplot(XX, aes(PC1, PC2, color=labs)) + geom_point() + theme_bw()
+
+```
