--- a/vignettes/dobin.Rmd
+++ b/vignettes/dobin.Rmd
@@ -5,7 +5,7 @@ author: "Sevvandi Kandanaarachchi"
 output: rmarkdown::html_vignette
 bibliography: bibliography.bib
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Introduction to dobin}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
