--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,6 @@
 ---
 output: github_document
+bibliography: vignettes/bibliography.bib
 ---
 
 ```{r setup, include=FALSE}
@@ -8,6 +9,8 @@ knitr::opts_chunk$set(echo = TRUE,
 ```
 # dobin
 [![Travis build status](https://travis-ci.org/sevvandi/dobin.svg?branch=master)](https://travis-ci.org/sevvandi/dobin)
+
+The R package **dobin** constructs a set of basis vectors tailored for outlier detection as described in [@dobin]. 
 
 ## Installation
 ```{r ins, eval=FALSE}
@@ -40,7 +43,7 @@ ggplot(XX, aes(DC1, DC2, color=labs)) + geom_point() + theme_bw()
 
 ```
 
-The first two principal components of the same dataset is shown in the following figure:
+To compare, we perform PCA on the same dataset. The first two principal components are shown in the figure below:
 
 ```{r bimodal_pca}
 library("dobin")
@@ -62,3 +65,5 @@ colnames(XX) <- c("PC1", "PC2", "labs" )
 ggplot(XX, aes(PC1, PC2, color=labs)) + geom_point() + theme_bw()
 
 ```
+
+# References
