--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -20,5 +20,5 @@
   year = {2019},
   title = {Dimension reduction for outlier detection using DOBIN },
   type = {Working Paper},
-  url={https://robjhyndman.com/publications/dobin/},
+  url={https://www.researchgate.net/publication/335568867_Dimension_reduction_for_outlier_detection_using_DOBIN},
 }
