--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,9 @@ knitr::opts_chunk$set(echo = TRUE,
 ```
 # dobin <img src='man/figures/logo.png' align="right" height="132.5" />
 
-[![Travis build status](https://travis-ci.org/sevvandi/dobin.svg?branch=master)](https://travis-ci.org/sevvandi/dobin)
+<!-- badges: start -->
+  [![R-CMD-check](https://github.com/sevvandi/dobin/workflows/R-CMD-check/badge.svg)](https://github.com/sevvandi/dobin/actions)
+  <!-- badges: end -->
 
 [![](https://cranlogs.r-pkg.org/badges/dobin)](https://cran.r-project.org/package=dobin)
 
